fix: grid of team wrap

--- a/static/src/style/about.scss
+++ b/static/src/style/about.scss
@@ -63,8 +63,8 @@
     grid-template-columns: 1fr 1fr;
     gap: 60px;
 
-    @media (max-width: 1450px) {
-      grid-template-columns: repeat(auto-fill, 1fr);
+    @media (max-width: 1140px) {
+      grid-template-columns: 1fr;
     }
   }
 
